--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @font-face {
   font-family: 'Zodiak-LightItalic';
   src: url('../fonts/Zodiak-LightItalic.woff2') format('woff2'),
@@ -10,3 +11,24 @@
   font-display: swap;
   font-style: italic;
 }
+
+@font-face {
+  font-family: 'zed-sans-bold';
+  src: url('../fonts/zed-sans-bold.woff2') format('woff2'),
+       url('../fonts/zed-sans-bold.woff') format('woff'),
+       url('../fonts/zed-sans-bold.ttf') format('truetype');
+  font-weight: 700;
+  font-display: swap;
+  font-style: bold;
+}
+
+@font-face {
+  font-family: 'zed-sans-regular';
+  src: url('../fonts/zed-sans-regular.woff2') format('woff2'),
+       url('../fonts/zed-sans-regular.woff') format('woff'),
+       url('../fonts/zed-sans-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
