--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Zodiak-LightItalic';
-  src: url('../fonts/Zodiak-LightItalic.woff2') format('woff2'),
-       url('../fonts/Zodiak-LightItalic.woff') format('woff'),
-       url('../fonts/Zodiak-LightItalic.ttf') format('truetype');
+  src: url('../fonts/Zodiak-LightItalic.woff2') format('woff2');
   font-weight: 300;
   font-display: swap;
   font-style: italic;
@@ -10,9 +8,7 @@
 
 @font-face {
   font-family: 'zed-sans-extendedbold';
-  src: url('../fonts/zed-sans-extendedbold.woff2') format('woff2'),
-       url('../fonts/zed-sans-extendedbold.woff') format('woff'),
-       url('../fonts/zed-sans-extendedbold.ttf') format('truetype');
+  src: url('../fonts/zed-sans-extendedbold.woff2') format('woff2');
   font-weight: 700;
   font-display: swap;
   font-style: bold;
@@ -20,9 +16,7 @@
 
 @font-face {
   font-family: 'zed-sans-extended';
-  src: url('../fonts/zed-sans-extended.woff2') format('woff2'),
-       url('../fonts/zed-sans-extended.woff') format('woff'),
-       url('../fonts/zed-sans-extended.ttf') format('truetype');
+  src: url('../fonts/zed-sans-extended.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -30,36 +24,28 @@
 
 @font-face {
   font-family: 'GeneralSans-Regular';
-  src: url('../fonts/GeneralSans-Regular.woff2') format('woff2'),
-       url('../fonts/GeneralSans-Regular.woff') format('woff'),
-       url('../fonts/GeneralSans-Regular.ttf') format('truetype');
+  src: url('../fonts/GeneralSans-Regular.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'GeneralSans-Italic';
-  src: url('../fonts/GeneralSans-Italic.woff2') format('woff2'),
-       url('../fonts/GeneralSans-Italic.woff') format('woff'),
-       url('../fonts/GeneralSans-Italic.ttf') format('truetype');
+  src: url('../fonts/GeneralSans-Italic.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: 'GeneralSans-Bold';
-  src: url('../fonts/GeneralSans-Bold.woff2') format('woff2'),
-       url('../fonts/GeneralSans-Bold.woff') format('woff'),
-       url('../fonts/GeneralSans-Bold.ttf') format('truetype');
+  src: url('../fonts/GeneralSans-Bold.woff2') format('woff2');
   font-weight: 700;
   font-display: swap;
   font-style: normal;
 }
 @font-face {
   font-family: 'GeneralSans-BoldItalic';
-  src: url('../fonts/GeneralSans-BoldItalic.woff2') format('woff2'),
-       url('../fonts/GeneralSans-BoldItalic.woff') format('woff'),
-       url('../fonts/GeneralSans-BoldItalic.ttf') format('truetype');
+  src: url('../fonts/GeneralSans-BoldItalic.woff2') format('woff2');
   font-weight: 700;
   font-display: swap;
   font-style: italic;
