--- a/src/prose.css
+++ b/src/prose.css
@@ -1,3 +1,77 @@
+article {
+  @apply font-sans;
+  & em {
+    @apply font-sans-italic;
+  }
+  & strong {
+    @apply font-sans-bold;
+  }
+  & strong em,
+  & em strong {
+    @apply font-sans-bolditalic;
+  }
+  & a {
+    @apply relative;
+    text-decoration: none !important;
+    &::before {
+      @apply absolute;
+      content: '';
+      width: 100%;
+      height: 2px;
+      bottom: -2px;
+      opacity: 0.5;
+      left: 0;
+      background-color: var(--tw-prose-links);
+      transition: opacity 0.3s;
+    }
+    &:hover::before {
+      opacity: 1;
+    }
+  }
+}
+.prose {
+    --tw-prose-body: #374151;
+    --tw-prose-headings: #111827;
+    --tw-prose-lead: #4b5563;
+    --tw-prose-links: #2563eb;
+    --tw-prose-bold: #111827;
+    --tw-prose-counters: #6b7280;
+    --tw-prose-bullets: #d1d5db;
+    --tw-prose-hr: #e5e7eb;
+    --tw-prose-quotes: #111827;
+    --tw-prose-quote-borders: #e5e7eb;
+    --tw-prose-captions: #6b7280;
+    --tw-prose-kbd: #111827;
+    --tw-prose-kbd-shadows: 17 24 39;
+    --tw-prose-code: #111827;
+    --tw-prose-pre-code: #e5e7eb;
+    --tw-prose-pre-bg: #1f2937;
+    --tw-prose-th-borders: #d1d5db;
+    --tw-prose-td-borders: #e5e7eb;
+}
+
+:where(h1, h2, h3, h4, h5, h6) {
+	.icon-link {
+		position: relative;
+		&::before {
+			content: '§';
+      @apply font-zed;
+			position: absolute;
+			left: -1.2ch;
+      font-size: 0.8em;
+			top: 50%;
+      transform: translateY(-50%);
+			opacity: 0;
+			text-decoration:none;
+      transition: opacity 0.3s;
+		}
+	}
+
+	&:hover .icon-link::before {
+		opacity: 0.4;
+	}
+}
+
 code[class*="language-"],
 pre[class*="language-"] {
 	text-align: left;
@@ -5,10 +79,8 @@ pre[class*="language-"] {
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
-	color: #c3cee3;
-	background: #263238;
-	font-family: Roboto Mono, monospace;
-	font-size: 0.9em;
+	color: #90a4ae;
+	background: #fafafa;
 	line-height: 1.5em;
 
 	-moz-tab-size: 4;
@@ -25,14 +97,16 @@ code[class*="language-"]::-moz-selection,
 pre[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection,
 pre[class*="language-"] ::-moz-selection {
-	background: #282E44;
+	background: #cceae7;
+	color: #263238;
 }
 
 code[class*="language-"]::selection,
 pre[class*="language-"]::selection,
 code[class*="language-"] ::selection,
 pre[class*="language-"] ::selection {
-	background: #1D4665;
+	background: #cceae7;
+	color: #263238;
 }
 
 :not(pre) > code[class*="language-"] {
@@ -51,7 +125,7 @@ pre[class*="language-"] {
 .language-css > code,
 .language-sass > code,
 .language-scss > code {
-	color: #fd9170;
+	color: #f76d47;
 }
 
 [class*="language-"] .namespace {
@@ -59,171 +133,147 @@ pre[class*="language-"] {
 }
 
 .token.atrule {
-	color: #c792ea;
+	color: #7c4dff;
 }
 
 .token.attr-name {
-	color: #ffcb6b;
+	color: #39adb5;
 }
 
 .token.attr-value {
-	color: #c3e88d;
+	color: #f6a434;
 }
 
 .token.attribute {
-	color: #c3e88d;
+	color: #f6a434;
 }
 
 .token.boolean {
-	color: #c792ea;
+	color: #7c4dff;
 }
 
 .token.builtin {
-	color: #ffcb6b;
+	color: #39adb5;
 }
 
 .token.cdata {
-	color: #80cbc4;
+	color: #39adb5;
 }
 
 .token.char {
-	color: #80cbc4;
+	color: #39adb5;
 }
 
 .token.class {
-	color: #ffcb6b;
+	color: #39adb5;
 }
 
 .token.class-name {
-	color: #f2ff00;
-}
-
-.token.color {
-	color: #f2ff00;
+	color: #6182b8;
 }
 
 .token.comment {
-	color: #546e7a;
+	color: #aabfc9;
 }
 
 .token.constant {
-	color: #c792ea;
+	color: #7c4dff;
 }
 
 .token.deleted {
-	color: #f07178;
+	color: #e53935;
 }
 
 .token.doctype {
-	color: #546e7a;
+	color: #aabfc9;
 }
 
 .token.entity {
-	color: #f07178;
+	color: #e53935;
 }
 
 .token.function {
-	color: #c792ea;
+	color: #7c4dff;
 }
 
 .token.hexcode {
-	color: #f2ff00;
+	color: #f76d47;
 }
 
 .token.id {
-	color: #c792ea;
+	color: #7c4dff;
 	font-weight: bold;
 }
 
 .token.important {
-	color: #c792ea;
+	color: #7c4dff;
 	font-weight: bold;
 }
 
 .token.inserted {
-	color: #80cbc4;
+	color: #39adb5;
 }
 
 .token.keyword {
-	color: #c792ea;
-	font-style: italic;
+	color: #7c4dff;
 }
 
 .token.number {
-	color: #fd9170;
+	color: #f76d47;
 }
 
 .token.operator {
-	color: #89ddff;
+	color: #39adb5;
 }
 
 .token.prolog {
-	color: #546e7a;
+	color: #aabfc9;
 }
 
 .token.property {
-	color: #80cbc4;
+	color: #39adb5;
 }
 
 .token.pseudo-class {
-	color: #c3e88d;
+	color: #f6a434;
 }
 
 .token.pseudo-element {
-	color: #c3e88d;
+	color: #f6a434;
 }
 
 .token.punctuation {
-	color: #89ddff;
+	color: #39adb5;
 }
 
 .token.regex {
-	color: #f2ff00;
+	color: #6182b8;
 }
 
 .token.selector {
-	color: #f07178;
+	color: #e53935;
 }
 
 .token.string {
-	color: #c3e88d;
+	color: #f6a434;
 }
 
 .token.symbol {
-	color: #c792ea;
+	color: #7c4dff;
 }
 
 .token.tag {
-	color: #f07178;
+	color: #e53935;
 }
 
 .token.unit {
-	color: #f07178;
+	color: #f76d47;
 }
 
 .token.url {
-	color: #fd9170;
+	color: #e53935;
 }
 
 .token.variable {
-	color: #f07178;
-}
-
-:where(h2, h3, h4, h5, h6) {
-	.icon-link {
-		position: relative;
-
-		&::before {
-			content: '§';
-			position: absolute;
-			left: -1.2ch;
-			top: 0;
-			line-height: 1;
-			opacity: 0;
-		}
-	}
-
-	&:hover .icon-link::before {
-		opacity: 0.5;
-	}
+	color: #e53935;
 }
